# catalyst-core

./: .envrc  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .prettierrc  00_prologue.html  01_intro.html  404.html  97_CONTRIBUTING.html  98_CODE_OF_CONDUCT.html  99_example_enhanced_markup.html  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  Cargo.toml  Earthfile  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  SECURITY.md  ZZ_suffix.html  blueprint.cue  book.toml  catalyst-core-base.dockerfile  config.yaml  convert_row.err  e_config.yaml  example-enhanced-markup.html  failing-tests.md  flake.nix  index.html  install-all.sh  intro.html  jormungandr.dockerfile  lefthook.yml  package-lock.json  package.json  playwright.config.ts  (+9 more)
services/voting-node/: .earthlyignore  .env  .gitignore  Dockerfile  Earthfile  README.md  blueprint.cue  development.md  docker-compose.yml  entry.sh  ideascale.json  leader0-schedule.md  main.py  poetry.toml  pyproject.toml  readme.md  requirements.txt  run.sh  snapshot-data.md
services/voting-node/extras/: otel-collector.yaml  prometheus.yml  tempo-local.yaml
services/voting-node/tests/: test_leader0_schedule.py
services/voting-node/voting_node/: __init__.py  api.py  app.py  cli.py  committee.py  config.py  db.py  envvar.py  helpers.py  importer.py  jcli.py  jormungandr.py  logs.py  main.py  models.py  node.py  nodes.py  service.py  storage.py  tasks.py  templates.py  utils.py
src/audit/: Cargo.toml  README.md
src/audit/balance/: Earthfile  README.md  entry.sh  node_config.yaml
src/cat-data-service/: Cargo.toml  Earthfile  README.md  blueprint.cue  entry.sh
src/cat-data-service/src/: cli.rs  logger.rs  main.rs  settings.rs  state.rs
src/catalyst-toolbox/: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  block0.yaml  challenges.json  env.bat  flake.nix  proposals.json  script.sh  voteplans.json
src/catalyst-toolbox/.cargo/: audit.toml
src/catalyst-toolbox/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
src/catalyst-toolbox/catalyst-toolbox/: Cargo.toml  Earthfile  entry.sh
src/catalyst-toolbox/catalyst-toolbox-cli/: Cargo.toml
src/catalyst-toolbox/catalyst-toolbox-lib/: Cargo.toml
src/catalyst-toolbox/ci/: release-info.py
src/catalyst-toolbox/doc/: ideascale_importer.md  private-key-and-qr-code.md  tally-recovery.md
src/catalyst-toolbox/snapshot-lib/: Cargo.toml
src/catalyst-toolbox/src/: archive.rs  lib.rs  snapshot.rs  testing.rs
src/catalyst-toolbox/voting-hir/: Cargo.toml
src/chain-libs/: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  flake.nix
src/chain-libs/.circleci/: config.yml
src/chain-libs/.github/: dependabot.yml
src/chain-libs/btree/: .gitignore  Cargo.toml  README.md
src/chain-libs/cardano-legacy-address/: Cargo.toml  README.md
src/chain-libs/chain-addr/: Cargo.toml
src/chain-libs/chain-core/: Cargo.toml
src/chain-libs/chain-crypto/: Cargo.toml  config.toml
src/chain-libs/chain-evm/: Cargo.toml  README.md
src/chain-libs/chain-impl-mockchain/: Cargo.toml  README.md
src/chain-libs/chain-network/: Cargo.toml  build.rs
src/chain-libs/chain-ser/: Cargo.toml
src/chain-libs/chain-storage/: Cargo.toml  README.md
src/chain-libs/chain-storage-sqlite/: Cargo.toml
src/chain-libs/chain-storage-sqlite-old/: Cargo.toml
src/chain-libs/chain-test-utils/: Cargo.toml
src/chain-libs/chain-time/: Cargo.toml
src/chain-libs/chain-vote/: Cargo.toml  build.rs
src/chain-libs/chain-watch/: Cargo.toml  build.rs
src/chain-libs/imhamt/: Cargo.toml  build.rs
src/chain-libs/network-core/: Cargo.toml
src/chain-libs/network-grpc/: Cargo.toml
src/chain-libs/sparse-array/: Cargo.toml
src/chain-libs/typed-bytes/: Cargo.toml
src/chain-wallet-libs/: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Earthfile  README.md
src/chain-wallet-libs/bip39/: Cargo.toml
src/chain-wallet-libs/bip44/: Cargo.toml
src/chain-wallet-libs/chain-path-derivation/: Cargo.toml
src/chain-wallet-libs/doc/: CRYPTO.md  EME.md  getting_started.md
src/chain-wallet-libs/hdkeygen/: Cargo.toml  LICENSE-APACHE  config.toml
src/chain-wallet-libs/hdwallet/: Cargo.toml
src/chain-wallet-libs/keygen/: Cargo.toml  patch-packaging.sh
src/chain-wallet-libs/shield-protocol/: Cargo.toml
src/chain-wallet-libs/symmetric-cipher/: Cargo.toml
src/chain-wallet-libs/test-vectors/: block0  block0.json  genesis.yaml  leader.prv  leader.pub  rebuild_genesis_data.py  update-json.py
src/chain-wallet-libs/wallet/: Cargo.toml
src/chain-wallet-libs/wallet-android/: .gitignore  README.md  settings.gradle
src/chain-wallet-libs/wallet-c/: Cargo.toml  cbingden.toml  regen_header.sh  wallet.h
src/chain-wallet-libs/wallet-js/: Cargo.toml  LICENSE_MIT
src/election-db/: .env  Cargo.toml  diesel.toml
src/event-db/: .env  .gitignore  Cargo.toml  Earthfile  Readme.md  docker-compose.yml  refinery-docs.toml  refinery.toml
src/event-db/src/: lib.rs  (+4 more)
src/jortestkit/: Cargo.toml  README.md
src/sign/: Cargo.toml  README.md
src/tally/: Cargo.toml  README.md
src/vit-servicing-station/: .env  .gitmodules  .spectral.yaml  Cargo.toml  Earthfile  README.md  flake.nix
src/voting-tools-rs/: .gitignore  Cargo.toml  Earthfile  README.md  config.toml  diesel.toml  entry.sh  flake.nix  foo  postgres@localhost  result
tests/: .env  Cargo.toml  Earthfile  README.md  locatechromium.spec.ts
tests/cat-data-service-client/: core_backend_api.yaml
tests/component/: ideascale_importer.rs  main.rs
tests/typhon-registration/: print.html
tests/typhonWalletReg/: print.html
tests/wallet-automation/: Earthfile  convert-to-zip.py  global-setup.ts  package-lock.json  package.json  playwright.config.ts
utilities/fragment-exporter/: Earthfile  README.md  entry.sh  pyproject.toml
utilities/ideascale-importer/: .gitignore  Earthfile  README.md  config.json  entry.sh  mypy.ini  poetry.toml  pyproject.toml  requirements.txt  snapshot-importer-example-config.json  snapshot-importer-example-env.env
(+98725 files in other folders)
