[workspace]
members = [
  "src/catalyst-toolbox/catalyst-toolbox",
  "src/catalyst-toolbox/snapshot-lib",
  "src/chain-libs/imhamt",
  "src/chain-libs/chain-ser",
  "src/chain-libs/chain-core",
  "src/chain-libs/chain-vote",
  "src/chain-libs/chain-addr",
  "src/chain-libs/chain-time",
  "src/chain-libs/chain-crypto",
  "src/chain-libs/chain-network",
  "src/chain-libs/chain-storage",
  "src/chain-libs/chain-impl-mockchain",
  "src/chain-libs/cardano-legacy-address",
  "src/chain-libs/sparse-array",
  "src/chain-libs/typed-bytes",
  "src/chain-wallet-libs/chain-path-derivation",
  "src/chain-wallet-libs/hdkeygen",
  "src/chain-wallet-libs/wallet",
  "src/chain-wallet-libs/symmetric-cipher",
  "src/chain-wallet-libs/bindings/wallet-c",
  "src/chain-wallet-libs/bindings/wallet-core",
  "src/chain-wallet-libs/bindings/wallet-wasm-js",
  "src/jormungandr/jormungandr-lib",
  "src/jormungandr/jormungandr",
  "src/jormungandr/jcli",
  "src/jormungandr/explorer",
  "src/jormungandr/modules/settings",
  "src/jormungandr/modules/blockchain",
  "src/jormungandr/testing/jormungandr-automation",
  "src/jormungandr/testing/jormungandr-integration-tests",
  "src/jormungandr/testing/loki",
  "src/jormungandr/testing/mjolnir",
  "src/jormungandr/testing/hersir",
  "src/jormungandr/testing/thor",
  "src/jortestkit",
  "src/vit-servicing-station/vit-servicing-station-cli",
  "src/vit-servicing-station/vit-servicing-station-lib",
  "src/vit-servicing-station/vit-servicing-station-server",
  "src/vit-servicing-station/vit-servicing-station-tests",
  "src/vit-testing/iapyx",
  "src/vit-testing/vitup",
  "src/vit-testing/valgrind",
  "src/vit-testing/integration-tests",
  "src/vit-testing/mainnet-tools",
  "src/vit-testing/mainnet-lib",
  "src/vit-testing/db-sync-explorer",
  "src/vit-testing/snapshot-trigger-service",
  "src/vit-testing/signals-handler",
  "src/vit-testing/scheduler-service-lib",
  "src/voting-tools-rs",
]

[workspace.dependencies]
proptest = { git = "https://github.com/proptest-rs/proptest.git" }

# Observability tools to instrument, generate, collect, and export telemetry data. 
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"

# Framework for instrumenting Rust programs to collect structured, event-based diagnostic information.
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.16"
tracing-opentelemetry = "0.18.0"
tracing-test = "0.2.3"

# command line argument parsing
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"  # shell autocomplete for CLIs

[patch.crates-io]
cryptoxide = { git = "https://github.com/typed-io/cryptoxide.git" }
