[workspace]
members = [
  "tests",
  "src/catalyst-toolbox/catalyst-toolbox",
  "src/catalyst-toolbox/snapshot-lib",
  "src/chain-libs/imhamt",
  "src/chain-libs/chain-ser",
  "src/chain-libs/chain-core",
  "src/chain-libs/chain-vote",
  "src/chain-libs/chain-addr",
  "src/chain-libs/chain-time",
  "src/chain-libs/chain-crypto",
  "src/chain-libs/chain-network",
  "src/chain-libs/chain-storage",
  "src/chain-libs/chain-impl-mockchain",
  "src/chain-libs/cardano-legacy-address",
  "src/chain-libs/sparse-array",
  "src/chain-libs/typed-bytes",
  "src/chain-wallet-libs/chain-path-derivation",
  "src/chain-wallet-libs/hdkeygen",
  "src/chain-wallet-libs/wallet",
  "src/chain-wallet-libs/symmetric-cipher",
  "src/chain-wallet-libs/bindings/wallet-c",
  "src/chain-wallet-libs/bindings/wallet-core",
  "src/chain-wallet-libs/bindings/wallet-wasm-js",
  "src/event-db",
  "src/jormungandr/jormungandr-lib",
  "src/jormungandr/jormungandr",
  "src/jormungandr/jcli",
  "src/jormungandr/explorer",
  "src/jormungandr/modules/settings",
  "src/jormungandr/modules/blockchain",
  "src/jormungandr/testing/jormungandr-automation",
  "src/jormungandr/testing/jormungandr-integration-tests",
  "src/jormungandr/testing/loki",
  "src/jormungandr/testing/mjolnir",
  "src/jormungandr/testing/hersir",
  "src/jormungandr/testing/thor",
  "src/jortestkit",
  "src/vit-servicing-station/vit-servicing-station-cli",
  "src/vit-servicing-station/vit-servicing-station-lib",
  "src/vit-servicing-station/vit-servicing-station-server",
  "src/vit-servicing-station/vit-servicing-station-tests",
  "src/vit-testing/iapyx",
  "src/vit-testing/vitup",
  "src/vit-testing/valgrind",
  "src/vit-testing/integration-tests",
  "src/vit-testing/mainnet-tools",
  "src/vit-testing/mainnet-lib",
  "src/vit-testing/snapshot-trigger-service",
  "src/vit-testing/signals-handler",
  "src/vit-testing/scheduler-service-lib",
  "src/voting-tools-rs",
  "src/cat-data-service",
  "src/tally",
]

[workspace.dependencies]
jormungandr-lib = { path = "src/jormungandr/jormungandr-lib" }
chain-impl-mockchain = { path = "src/chain-libs/chain-impl-mockchain" }

uuid = { version = "1", features = ["v4", "serde"] }
# we use this branch because it uses v1 of `itoa`, but the latest crates.io release doesn't
csv = { git = "https://github.com/BurntSushi/rust-csv" }
hex = "0.4"
cfg-if = "1"
proptest = "1.1"


# representing byte buffers while being generic over serde implementations
bytekind = "0.1.7"

# provides `NonEmpty` which is like a `Vec` but guarantees it is non-empty
nonempty = { version = "0.8", features = ["serialize"] }

# type-system protection against acidentally using unvalidated data
validity = "0.3.1"

# Observability tools to instrument, generate, collect, and export telemetry data.
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"

# Framework for instrumenting Rust programs to collect structured, event-based diagnostic information.
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.16"
tracing-opentelemetry = "0.18.0"
tracing-test = "0.2.3"

# small utility crate for nice table printout for variuos cmd tools
prettytable-rs = "0.10.0"

# extensions for iterators
itertools = "0.10"

# platform-independenent directory finding (e.g. home_dir() for `/home/<user>` on linux, `C:\Users\<user>` on windows)
dirs = "4"

# graphql-related utilities
graphql_client = "0.12"

# time-related utilities
chrono = { version = "0.4", features = ["serde"] }

# command line argument parsing
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"  # shell autocomplete for CLIs

# async traits
async-trait = "0.1.64"

rust_decimal = { version = "1.29" }

reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
warp-reverse-proxy = { version = "0.3", default-features = false, features = ["rustls-tls"] }
