[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]

[[test]]
name = "component"
path = "component/main.rs"

[[test]]
name = "integration"
path = "integration/main.rs"

[[test]]
name = "end2end"
path = "end2end/main.rs"

[[test]]
name = "non_functional"
path = "non_functional/main.rs"

[package]
name = "cat-data-service-client"
path = "cat-data-service-client/cat-data-service-client/src/lib.rs"