[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
sqlx = { version = "0.6", features = [ "runtime-actix-rustls","macros","postgres", "time", "bigdecimal", "json" ] }
config = "0.13"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
refinery = { version = "0.8", features = ["postgres"]}
uuid = { version = "1.4.0", features = ["v4"]}
dotenvy = { version = "0.15"}

[[test]]
name = "component"
path = "component/main.rs"

[[test]]
name = "integration"
path = "integration/main.rs"

[[test]]
name = "end2end"
path = "end2end/main.rs"

[[test]]
name = "non_functional"
path = "non_functional/main.rs"