[tool.poetry]
name = "voting-node"
version = "0.0.1"
description = ""
authors = ["Catalyst Core Developers <dev@iohk.io>"]
license = "MIT or Apache License 2.0"
readme = "README.md"
packages = [{include = "voting_node"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
# our dependencies
click = "^8.1.3"
asyncio = "^3.4.3"
asyncpg = "^0.27.0"
fastapi = "^0.101.0"
opentelemetry-distro = {extras = ["otlp"], version = "^0.37b0"}
opentelemetry-instrumentation = "^0.37b0"
opentelemetry-instrumentation-fastapi = "^0.37b0"
opentelemetry-instrumentation-asyncpg = "^0.37b0"
prometheus-fastapi-instrumentator = "^5.10.0"
PyYAML = "^6.0"
uvicorn = {extras = ["standard"], version = "~0.23.2"}
aiofile = "^3.8.5"
pydantic = "~2.1"
cryptography = "^40.0.1"
loguru = "^0.6.0"
ideascale-importer = {path = "../../utilities/ideascale-importer"}
brotlipy = "^0.7.0"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
# formatting
black = "^23.1.0"
# linting
ruff = "^0.0.254"
pdoc = "^13.1.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.scripts]
voting-node = "voting_node.main:voting_node_cli"

[tool.black]
line-length = 132
target-version = ['py311']

[tool.ruff]
# include pydoc lints
extend-select = ["D"]
line-length = 132

[tool.ruff.per-file-ignores]
# ignore long lines in templates
"voting_node/templates.py" = ["E501"]
