[package]
name = "audit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-addr = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
chain-crypto = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
chain-vote = {git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
jormungandr-lib = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
chain-core = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
chain-impl-mockchain = {git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling",features= ["audit"] }
chain-ser = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
chain-storage = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
chain-time = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }
wallet = { git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling" }

rand_core = "0.6"

base64 = "0.21.0"
bech32 = "0.8"

clap = { version = "4", features = ["derive", "cargo"] }
clap_complete_command = { version = "0.5" }

color-eyre = "0.6"
thiserror = "1.0.40"
csv = "1.1"
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.17"
tracing.workspace = true
tracing-subscriber.workspace = true
rand = "0.8.3"

[dev-dependencies]
rand_chacha = "0.3"
smoke = "^0.2.1"
criterion = "0.3"
chain-crypto = {  git = "https://github.com/input-output-hk/catalyst-core.git", branch = "rm-spending-counter-audits-tooling", features=["property-test-api"]}

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "tally"
path = "src/tally/bin/main.rs"

[[bin]]
name = "offline"
path = "src/offline/bin/main.rs"

[[bin]]
name = "find"
path = "src/find/bin/main.rs"