[package]
name = "cat-data-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-db = { path = "../event-db" }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "2", features = ["macros"] }

tokio = { version = "1.8", features = ["rt", "macros", "rt-multi-thread"] }
thiserror = { version = "1.0" }
axum = { version = "0.6.9" }
metrics = { version = "0.18" }
metrics-exporter-prometheus = { version = "0.8" }

tower-http = { version = "0.4", features = ["cors"] }

rust_decimal = {  workspace = true }

chrono = { workspace = true }

jormungandr-lib = { workspace = true, optional = true }
chain-impl-mockchain = { workspace = true, optional = true }

quickcheck = { version = "0.9", optional = true }
quickcheck_macros = { version = "0.9", optional = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[features]
jorm-mock = ["jormungandr-lib", "chain-impl-mockchain/property-test-api", "quickcheck", "quickcheck_macros"]
