[package]
name = "cat-data-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-db = { path = "../event-db" }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3", features = ["macros"] }

tokio = { version = "1.8", features = ["rt", "macros", "rt-multi-thread"] }
thiserror = { version = "1.0" }
axum = { version = "0.6.9" }
metrics = { version = "0.21.1" }
metrics-exporter-prometheus = { version = "0.12.1" }

tower-http = { version = "0.4", features = ["cors"] }

rust_decimal = {  workspace = true }

chrono = { workspace = true }

jormungandr-lib = { workspace = true, optional = true }
chain-impl-mockchain = { workspace = true, optional = true }

quickcheck = { version = "1.0.3", optional = true }
quickcheck_macros = { version = "1.0.0", optional = true }

poem = { version = "1.3.57", features = ["opentelemetry", "prometheus"] }
poem-openapi = { version = "3.0.3", features = ["openapi-explorer", "rapidoc", "redoc", "swagger-ui"] }

# Metrics - Poem
opentelemetry-prometheus = { version = "0.13"}
opentelemetry = { workspace = true }

once_cell = { workspace = true }

cryptoxide = { workspace = true }

uuid = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[features]
jorm-mock = ["jormungandr-lib", "chain-impl-mockchain/property-test-api", "quickcheck", "quickcheck_macros"]
