[package]
name = "election-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3"
chrono = { version = "0.4.23", features= ["serde"] }
diesel = { version = "2.0.2", features = ["postgres"] }
diesel-autoincrement-new-struct = "0.1.1"
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
