[package]
name = "event-db"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

dotenvy = "0.15"

bb8 = "0.8.0"            # Database Connection Pool Manager
bb8-postgres = "0.8.1"   # BB8 Postgres Connection Support.
tokio-postgres = "0.7.7" # Tokio postgres query handler.

async-trait = { workspace = true }

tokio = { version = "1", features = ["full"] }

time = { version = "0.3", features = ["parsing", "formatting"] }
