[package]
name = "event-db"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0" }

serde_json = { version = "1.0" }

dotenvy = "0.15"

bb8 = "0.8.0"            # Database Connection Pool Manager
bb8-postgres = "0.8.1"   # BB8 Postgres Connection Support.
# Tokio postgres query handler.
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-serde_json-1"]}

async-trait = { workspace = true }

tokio = { version = "1", features = ["full"] }

chrono = { workspace = true }

rust_decimal = {  workspace = true, features = ["serde-with-float", "db-tokio-postgres"] }
