[package]
name = "jortestkit"
version = "0.1.0"
authors = ["dkijania <dariusz.kijania@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.7"
tokio = { version = "1.1", features = ["macros"] }
bytesize = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
rand_core = "0.5"
rand_chacha = "0.2"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.0"
custom_debug = "0.5"
thiserror = "1.0"
sysinfo = { version = "0.14.10" }
os_info = { version = "2.0.6", default-features = false }
zip = "0.5.6"
flate2 = "1.0.16"
tar = "0.4"
hex = "0.4"
lazy_static = "1"
serde_derive = "1.0"
assert_fs = "1.0"
serde_yaml = "0.8"
predicates = "1.0"
indicatif = "0.15.0"
fs_extra = "1.1.0"
console = "0.11"
dialoguer = "0.8"
semver = "0.11"
csv = "1.1.3"
warp = "0.3"
base64 = "0.12.1"
sha2 = "0.9"
sha-1 = "0.9"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls"]