[package]
name = "jortestkit"
version = "0.1.0"
authors = ["dkijania <dariusz.kijania@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.8"
tokio = { version = "1.1", features = ["macros"] }
bytesize = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
time = { version = "0.3.29", features = ["formatting", "parsing"] }
humantime = "2.0"
custom_debug = "0.5"
thiserror = "1.0"
sysinfo = { version = "0.26" }
os_info = { version = "3.1", default-features = false }
zip = { version = "0.6.0", default-features = false }
flate2 = "1.0.16"
tar = "0.4"
hex = "0.4"
lazy_static = "1"
serde_derive = "1.0"
assert_fs = "1.0"
serde_yaml = "0.8"
predicates = "2.1"
indicatif = "0.15.0"
fs_extra = "1.1.0"
console = "0.15"
dialoguer = "0.10"
semver = "1.0"
csv = "1.1.3"
warp = "0.3"
base64 = "0.13.0"
rayon = "1"
sha2 = "0.9"
sha-1 = "0.9"
reqwest = { workspace = true }
