[package]
name = "tally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-crypto = { path = "../chain-libs/chain-crypto" }
chain-vote = { path = "../chain-libs/chain-vote" }
rand_core = "0.6"

base64 = "0.21.0"
bech32 = "0.8"

clap = { version = "4", features = ["derive", "cargo"] }
clap_complete_command = { version = "0.5" }

color-eyre = "0.6"

[dev-dependencies]
rand_chacha = "0.3"
smoke = "^0.2.1"
criterion = "0.3"
chain-crypto = { path = "../chain-libs/chain-crypto", features=["property-test-api"]}
