[package]
name = "vit-servicing-station"
version = "0.1.0"
authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = {version = "0.2", features = ["tls"] }
tokio = { version = "0.2.21", features = ["macros"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.53"