[package]
name = "vit-servicing-station"
version = "0.1.0"
authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "1.13.2"
async-graphql-warp = "1.13.2"
async-trait = "0.1.33"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
structopt = "0.3.14"
tokio = { version = "0.2.21", features = ["macros"] }
warp = { version = "0.2", features = ["tls"] }

# This solves building on windows when sqlite3lib is not installed or missing in the `$PATH`
# as it happens with the github actions pipeline associated to this project.
[target.'cfg(windows)'.dependencies]
libsqlite3-sys =  { version = "0.9.1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"