[package]
name = "voting_tools_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

color-eyre = "0.6"  # error handling
clap = { version = "3.2", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

microtype = { version = "0.7.5", features = ["serde"] }

once_cell = "1"

diesel =  { version = "2", features = ["postgres", "64-column-tables", "numeric", "serde_json", "r2d2"]}
diesel-derive-enum = "2.0.0-rc.0"

bigdecimal = { version = "0.3", features = ["serde"] }

hex = "0.4"

tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = { version = "1.26", features = ["serde", "db-postgres"] }

mainnet-lib = { path = "../vit-testing/mainnet-lib"}
cardano-serialization-lib = "11.0.0"

[dev-dependencies]
proptest = { workspace = true }
test-strategy = "0.2"
serial_test = "0.9"
assert_fs = "1.0.7"
tempdir = "0.3"
tracing-test = "0.2"
insta = { version = "1", features = ["json"] }
postgres = "0.19"  # just to create the reference db in case it doesn't already exist
diesel_migrations="2"

[features]
all_tests = ["reference_tests", "e2e_tests"]
reference_tests = []
e2e_tests = []
