[package]
name = "voting_tools_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

itertools = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
nonempty = { workspace = true }
validity = { workspace = true }
bytekind = { workspace = true }

rayon = "1.7" # Parallel Iteration.
dashmap = "5.4.0" # Parallel access map.
scheduled-thread-pool = "0.2.7" # Thread Pool for connection pooling.

color-eyre = "0.6"  # error handling
clap = { workspace = true}

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
blake2 = "0.10"

microtype = { version = "0.7.5", features = ["serde"] }
once_cell = "1"

diesel =  { version = "2", features = ["postgres", "64-column-tables", "numeric", "serde_json", "r2d2"]}
diesel-derive-enum = "2.0.0-rc.0"

bigdecimal = { version = "0.3", features = ["serde"] }

hex = "0.4"

tracing.workspace = true
tracing-subscriber.workspace = true
rust_decimal = { version = "1.26", features = ["serde", "db-postgres"] }

mainnet-lib = { path = "../vit-testing/mainnet-lib"}
cardano-serialization-lib = "11.3.1"

rand = "0.6"
rand_core = "0.4"
rand_chacha = "0.3"

thiserror = "1"

proptest = { workspace = true }
test-strategy = "0.2"

cddl = "0.9.1"
postgres = {version = "0.19.4" , features = ["with-serde_json-1"] }
cryptoxide = "0.4.2"

rust_decimal_macros = "1.29"



[dev-dependencies]
serial_test = "0.9"
assert_fs = "1.0.7"
tempdir = "0.3"
tracing-test.workspace = true
insta = { version = "1", features = ["json"] }
postgres = "0.19"  # just to create the reference db in case it doesn't already exist
diesel_migrations="2"
jormungandr-lib = { workspace = true }

[features]
all_tests = ["reference_tests", "e2e_tests"]
reference_tests = []
e2e_tests = []
