[package]
name = "voting_tools_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

itertools = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
nonempty = { workspace = true }
validity = { workspace = true }
bytekind = { workspace = true }

rayon = "1.7" # Parallel Iteration.
dashmap = "5.5.0" # Parallel access map.

color-eyre = "0.6"  # error handling
clap = { workspace = true}

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

microtype = { version = "0.7.6", features = ["serde"] }

hex = "0.4"

tracing.workspace = true
tracing-subscriber.workspace = true
rust_decimal = { version = "1.26", features = ["serde", "db-postgres"] }

cardano-serialization-lib = "11.4"

thiserror = "1"

proptest = { workspace = true }
test-strategy = "0.2"

cddl = "0.9.2"
postgres = {version = "0.19.5" , features = ["with-serde_json-1"] }
cryptoxide = "0.4.2"

[dev-dependencies]
tracing-test.workspace = true
insta = { version = "1", features = ["json"] }
postgres = "0.19"  # just to create the reference db in case it doesn't already exist

[features]
all_tests = ["reference_tests", "e2e_tests"]
reference_tests = []
e2e_tests = []
