[tool.poetry]
name = "ideascale-importer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.3"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
asyncpg = "0.27.0"
asyncpg-stubs = "0.27.0"
attrs = "22.1.0"
beautifulsoup4 = "4.11.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
commonmark = "0.9.1"
flake8 = "6.0.0"
frozenlist = "1.3.3"
idna = "3.4"
markdownify = "0.11.6"
marshmallow = "3.19.0"
marshmallow-dataclass = "8.5.10"
mccabe = "0.7.0"
multidict = "6.0.3"
mypy = "0.991"
mypy-extensions = "0.4.3"
packaging = "22.0"
pycodestyle = "2.10.0"
pyflakes = "3.0.1"
pygments = "2.13.0"
rich = "12.6.0"
six = "1.16.0"
soupsieve = "2.3.2.post1"
tomli = "2.0.1"
typeguard = "2.13.3"
typer = "0.7.0"
typing-inspect = "0.8.0"
typing-extensions = "4.4.0"
yarl = "1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
